# anemoi

./: .editorconfig  .gitignore  AGENTS.md  Anemoi.sln  CONTRIBUTING.md  Cargo.toml  PI_SETUP.md  README.md
.githooks/: commit-msg  pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-task.md
.github/scripts/: validate-branch-name.sh  validate-commit-message.sh
.github/workflows/: ci.yml
config/: anemoi.example.yaml  anemoi.live.yaml  anemoi.llama-swap.example.yaml  anemoi.pi.yaml  anemoi.prometheus.yaml
crates/anemoi-cli/: Cargo.toml
crates/anemoi-cli/src/: main.rs
crates/anemoi-core/: Cargo.toml
crates/anemoi-core/src/: lib.rs
crates/anemoi-daemon/: Cargo.toml
crates/anemoi-daemon/src/: lib.rs  main.rs
crates/anemoi-guard/: Cargo.toml
crates/anemoi-guard/src/: lib.rs  main.rs
crates/anemoi-mcp/: Cargo.toml
crates/anemoi-mcp/src/: lib.rs
crates/anemoi-policy/: Cargo.toml
crates/anemoi-policy/src/: eviction.rs  lib.rs  pressure.rs
crates/anemoi-runtime/: Cargo.toml
crates/anemoi-runtime/src/: lib.rs
crates/anemoi-telemetry/: Cargo.toml
crates/anemoi-telemetry/src/: lib.rs
deploy/config/: appsettings.example.json
deploy/docker/: Dockerfile  docker-compose.yml
docs/: DEPLOYMENT.md  GETTING_STARTED.md  INFERENCE_GATEWAY.md  README.md  handoff.md  security-scan.md  setup.md  test_roadmap.md
docs/build_prompts/: 00-v1-scope-no-database.md  01-config-validation.md  02-core-domain-contracts.md  03-runtime-adapter-contract.md  04-mock-runtime-snapshots.md  05-policy-candidate-generation.md  06-policy-continuity-staging.md  07-telemetry-memory-jsonl.md  08-daemon-decision-api.md  09-cli-operator-loop.md  10-llama-swap-inspection.md  11-ollama-inspection.md  12-openapi-contract.md  13-mcp-minimum-surface.md  14-hardening-release-checklist.md  15-live-validation-safety-plan.md  16-llama-swap-readonly-probe.md  17-live-runtime-config-profile.md  18-residency-truth-contract.md  19-live-decision-smoke.md  20-controlled-execution-gate.md  21-runtime-reconciliation-loop.md  22-background-staging-worker.md  23-load-unload-action-plan.md  24-resource-pressure-model.md  25-eviction-and-pinning-policy.md  26-operator-status-surface.md  27-durable-event-store.md  28-inference-forwarding-gateway.md  README.md
docs/live_validation/: README.md  controlled-execution-gate.md  decision-smoke.md  llama-cpp-probe.md  llama-swap-probe.md  residency-truth-contract.md  safety-plan.md
scripts/: README.md  start-mcp.ps1
src/Anemoi.Api/: Anemoi.Api.csproj  Program.cs  appsettings.json
src/Anemoi.Api/Controllers/: ChatCompletionsController.cs  HealthController.cs  ModelsController.cs
src/Anemoi.Api/Extensions/: ConfiguredBackendRegistry.cs  ServiceCollectionExtensions.cs
src/Anemoi.Api/Mapping/: OpenAiMapper.cs
src/Anemoi.Api/Middleware/: ExceptionHandlingMiddleware.cs
src/Anemoi.Api/Models/: OpenAiDtos.cs
src/Anemoi.Api/Properties/: launchSettings.json
src/Anemoi.Backends.LlamaCpp/: Anemoi.Backends.LlamaCpp.csproj  LlamaCppChatBackend.cs
src/Anemoi.Backends.LlamaCpp/Clients/: LlamaCppHttpClient.cs
src/Anemoi.Backends.LlamaCpp/DependencyInjection/: ServiceCollectionExtensions.cs
src/Anemoi.Backends.LlamaCpp/Mapping/: LlamaCppChatMapper.cs
src/Anemoi.Backends.LlamaCpp/Models/: LlamaCppDtos.cs
src/Anemoi.Backends.Ollama/: OllamaChatBackend.cs
src/Anemoi.Backends.Ollama/Clients/: OllamaHttpClient.cs
src/Anemoi.Backends.Ollama/DependencyInjection/: ServiceCollectionExtensions.cs
src/Anemoi.Backends.Ollama/Mapping/: OllamaChatMapper.cs
src/Anemoi.Backends.Ollama/Models/: OllamaDtos.cs
src/Anemoi.Core/: Anemoi.Core.csproj
src/Anemoi.Core/Configuration/: RouterOptions.cs
src/Anemoi.Core/Exceptions/: RouterExceptions.cs
src/Anemoi.Core/Interfaces/: RouterInterfaces.cs
src/Anemoi.Core/Models/: RouterModels.cs
src/Anemoi.Core/Services/: BackendHealthService.cs  BackendRegistry.cs  ChatCompletionService.cs  ProfileResolver.cs  RouteSelector.cs  RouterOptionsValidator.cs
src/Anemoi.Tests/: Anemoi.Tests.csproj  ApiIntegrationTests.cs  BackendHttpClientRegistrationTests.cs  LiveOllamaValidationTests.cs  LlamaCppChatMapperTests.cs  OllamaChatMapperTests.cs  RouterOptionsValidatorTests.cs  RoutingTests.cs  TestConfiguration.cs
