[workspace]
resolver = "2"
members = [
    "crates/anemoi-core",
    "crates/anemoi-daemon",
    "crates/anemoi-runtime",
    "crates/anemoi-policy",
    "crates/anemoi-telemetry",
    "crates/anemoi-cli",
    "crates/anemoi-mcp",
    "crates/anemoi-guard",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/alexlucero/anemoi"

[workspace.dependencies]
anemoi-core = { path = "crates/anemoi-core" }
anemoi-runtime = { path = "crates/anemoi-runtime" }
anemoi-policy = { path = "crates/anemoi-policy" }
anemoi-telemetry = { path = "crates/anemoi-telemetry" }
anemoi-daemon = { path = "crates/anemoi-daemon" }
anemoi-mcp = { path = "crates/anemoi-mcp" }

anyhow = "1"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
parking_lot = "0.12"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
thiserror = "1"
walkdir = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }