[package]
name = "anemoi-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "anemoi"
path = "src/main.rs"

[dependencies]
anemoi-core.workspace = true
anemoi-daemon.workspace = true
anemoi-telemetry.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
