[package]
name = "anemoi-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anemoi-core.workspace = true
anemoi-daemon.workspace = true
anemoi-telemetry.workspace = true
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
