[package]
name = "anemoi-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anemoi-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
