[package]
name = "anemoi-telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anemoi-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
futures.workspace = true